Overall Project Update

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,6 +18,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Universal Analyst Model" />
     <meta name="twitter:description" content="AI-powered data analytics platform" />
+    <link rel="icon" href="data:," />
   </head>
 
   <body>
